@@ -48,13 +48,21 @@ int _fast fexist(char *filename)
 long _fast fsize(char *filename)
 {
     FFIND *ff;
+    FILE  *fp;
     long ret = -1L;
 
     ff = FFindOpen(filename, 0);
 
     if (ff)
     {
-        ret = ff->ff_fsize;
+	 if (ret != -1L) {
+		ret = ff->ff_fsize;
+	 } else {
+		fp = fopen(filename, "rb");
+		fseek(fp, 0, SEEK_END);
+		ret = ftell(fp);
+		fclose(fp);
+	 };
         FFindClose(ff);
     }
 
