@@ -145,6 +145,9 @@ FFIND *_fast FFindOpen(char *filespec, unsigned short attribute)
                     if (patmat(de->d_name, ff->lastbit))
                     {
                         strncpy(ff->ff_name, de->d_name, sizeof ff->ff_name);
+			 ff->ff_fsize = -1L; /* All who wants to know it's size 
+					      * must read it by himself
+					      */
                         fin = 1;
                     }
                 }
@@ -299,7 +302,10 @@ int _fast FFindNext(FFIND * ff)
                 if (patmat(de->d_name, ff->lastbit))
                 {
                     strncpy(ff->ff_name, de->d_name, sizeof ff->ff_name);
-                    fin = 1;
+		    ff->ff_fsize = -1L; /* All who wants to know it's size 
+					 * must read it by himself
+					 */
+		    fin = 1;
                     rc = 0;
                 }
             }
